# machina-cli

./: .gitignore  CHANGELOG.md  CLAUDE.md  CLI-RESULTS.md  DEBUG-REPORT.md  FACTORY.md  README.md  RESULTS.md  install.ps1  install.sh  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: agentic-harness-loop.md  credentials.md  factory.md  loop-tools-connector.py
docs-site/: .gitignore  README.md  index.md  package-lock.json  package.json
docs-site/.vitepress/: config.mts
docs-site/.vitepress/theme/: custom.css
docs-site/commands/: agent.md  approvals.md  config.md  connect.md  connector.md  context-graph.md  credentials.md  deploy.md  document.md  execution.md  factory.md  login.md  loop.md  mapping.md  mcp.md  org.md  project.md  prompt.md  skills.md  sports.md  template.md  update.md  workflow.md
docs-site/guide/: authentication.md  configuration.md  installation.md  quickstart.md  repl.md  running.md
docs/harness-loop-kit/: PLAYBOOK-SCORECARD.md  README.md  VALIDATION.md  context-verify.py  nodes.py  provision.py  surface-verify.py
src/machina_cli/: __init__.py  browser_auth.py  client.py  config.py  factory_client.py  loop_client.py  main.py  project_client.py  repl.py  update_check.py  updater.py
src/machina_cli/commands/: agent.py  approvals.py  auth.py  config_cmd.py  connect.py  connector.py  context_graph.py  create.py  credentials.py  deploy.py  document.py  execution.py  factory.py  loop.py  mapping.py  mcp.py  org.py  project.py  prompt.py  search.py  skills.py  sports.py  template.py  workflow.py
tests/: test_approvals.py  test_cli_output.py  test_client.py  test_connect.py  test_context_graph_arena_edges.py  test_context_graph_status_freshness.py  test_context_graph_timeline.py  test_create_ai_app.py  test_mcp_url.py  test_org_usage.py  test_sports_integration.py
