[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "machina-cli"
version = "0.1.0"
description = "CLI for the Machina AI Agent platform"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "typer[all]>=0.9.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "keyring>=24.0.0",
    "rich>=13.0.0",
]

[project.scripts]
machina = "machina_cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/machina_cli"]
